--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
   <title>Sample app using the log-controller element</title>
   <script src="packages/web_components/platform.js"></script>
   <script src="packages/web_components/dart_support.js"></script>
-  <link rel="import" href="../lib/log_controller.html">
+  <link rel="import" href="packages/log_controller/log_controller.html">
   <script src="packages/browser/dart.js"></script>
 </head>
 <body>
